WIP to add named zoom levels to cameras

--- a/CCUI-StandaloneUI/CCUI-StandaloneUI.csproj
+++ b/CCUI-StandaloneUI/CCUI-StandaloneUI.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>CCUI_StandaloneUI</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <Configurations>Debug;Release;FullTest</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
