--- a/CCUI-UI/CCUI-Controls.csproj
+++ b/CCUI-UI/CCUI-Controls.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>CCUI_UI</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <Configurations>Debug;Release;FullTest</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
