--- a/DVIPProtocolTests/DVIPProtocolTests.csproj
+++ b/DVIPProtocolTests/DVIPProtocolTests.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <Configurations>Debug;Release;FullTest</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
