--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -14,6 +14,7 @@
     <!--<RuntimeIdentifier>win-x64-aot</RuntimeIdentifier>-->
     <!--<RuntimeIdentifiers>win-x64-aot</RuntimeIdentifiers>-->
     <UseWindowsForms>true</UseWindowsForms>
+    <Configurations>Debug;Release;FullTest</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
