update BMD API references NOTE: windows11 names them something different? used 8.9 build which is a few ahead of whats curently on the hardware

--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -74,13 +74,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <COMReference Include="BMDSwitcherAPI.dll">
-      <Guid>8a92b919-156c-4d61-94ef-03f9be4004b0</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
+    <COMReference Include="BMDSwitcherAPI">
       <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>0</VersionMinor>
+      <VersionMajor>1</VersionMajor>
+      <Guid>8a92b919-156c-4d61-94ef-03f9be4004b0</Guid>
       <Lcid>0</Lcid>
       <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
 
