--- a/SwitcherControl/SwitcherControl.csproj
+++ b/SwitcherControl/SwitcherControl.csproj
@@ -7,23 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <COMReference Include="BMDSwitcherAPI">
-      <WrapperTool>tlbimp</WrapperTool>
-      <VersionMinor>0</VersionMinor>
-      <VersionMajor>1</VersionMajor>
-      <Guid>8a92b919-156c-4d61-94ef-03f9be4004b0</Guid>
-      <Lcid>0</Lcid>
-      <Isolated>false</Isolated>
-      <EmbedInteropTypes>true</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.14" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Configurations\Configurations.csproj" />
   </ItemGroup>
+
+	<ItemGroup>
+		<Reference Include="BMDSwitcherAPI">
+			<HintPath>..\lib\include\BMDSwitcherAPI.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 
 </Project>
