--- a/LutheRun/LutheRun.csproj
+++ b/LutheRun/LutheRun.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Remove="PrefabBlobs\ApostlesCreed.txt" />
+    <None Remove="PrefabBlobs\Bells.txt" />
     <None Remove="PrefabBlobs\CopyTitle.txt" />
     <None Remove="PrefabBlobs\EndTitle.txt" />
     <None Remove="PrefabBlobs\LordsPrayer.txt" />
@@ -19,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="PrefabBlobs\Bells.txt" />
     <EmbeddedResource Include="PrefabBlobs\EndTitle.txt" />
     <EmbeddedResource Include="PrefabBlobs\CopyTitle.txt" />
     <EmbeddedResource Include="PrefabBlobs\PIPReadingScripBlock.txt" />
