mega refactor to support hot-reloading slides (ignores reloads for video/audio files... but perhaps it wont immediately crash)

--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -220,6 +220,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\CCUI-UI\CCUI-Controls.csproj" />
+		<ProjectReference Include="..\CommonGraphics\CommonGraphics.csproj" />
 		<ProjectReference Include="..\CommonVersionInfo\CommonVersionInfo.csproj" />
 		<ProjectReference Include="..\IntegratedPresenterAPIInterop\IntegratedPresenterAPIInterop.csproj" />
 		<ProjectReference Include="..\SwitcherControl\SwitcherControl.csproj" />
