animate camera move

--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -34,6 +34,7 @@
 		<None Remove="BMDSwitcher\Mock\Images\leftcam.PNG" />
 		<None Remove="BMDSwitcher\Mock\Images\leftshot.PNG" />
 		<None Remove="BMDSwitcher\Mock\Images\leftshot1.PNG" />
+		<None Remove="BMDSwitcher\Mock\Images\noise1.png" />
 		<None Remove="BMDSwitcher\Mock\Images\organcam.PNG" />
 		<None Remove="BMDSwitcher\Mock\Images\organshot.PNG" />
 		<None Remove="BMDSwitcher\Mock\Images\organshot1.png" />
@@ -79,6 +80,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Resource Include="BMDSwitcher\Mock\Images\noise1.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
 		<Resource Include="BMDSwitcher\Mock\Images\organshot1.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Resource>
