editable ccu config from SC hot reload now loads ccu mock mv cam driver uses base64encoded png strings for thumbnails

--- a/UIControls/UIControls.csproj
+++ b/UIControls/UIControls.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommonGraphics\CommonGraphics.csproj" />
     <ProjectReference Include="..\Xenon\Xenon.csproj" />
   </ItemGroup>
 
