--- a/BlobData/seasons.json
+++ b/BlobData/seasons.json
@@ -8,6 +8,28 @@
         }
     },
     {
+        "start": "2022-10-30",
+        "note": "reformation",
+        "macros": {
+            "color-main": "\"#ff92162b\"",
+            "text-alt": "\"#ff92162b\""
+        }
+    },
+    {
+        "start": "2022-10-30",
+        "note": "all saints day",
+        "macros": {
+        }
+    },
+    {
+        "start": "2022-11-13",
+        "note": "pentecost",
+        "macros": {
+            "color-main": "\"#ff298f45\"",
+            "text-alt": "\"#ff298f45\""
+        }
+    },
+    {
         "start": "2022-11-27",
         "note": "advent",
         "macros": {
