--- a/Configurations/Configurations.csproj
+++ b/Configurations/Configurations.csproj
@@ -8,6 +8,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\CameraDriver\CameraDriver.csproj" />
 	  <ProjectReference Include="..\DVIPProtocol\DVIPProtocol.csproj" />
+	  <ProjectReference Include="..\VariableMarkupAttributes\VariableMarkupAttributes.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
