Watchable atem state

--- a/SwitcherControl/SwitcherControl.csproj
+++ b/SwitcherControl/SwitcherControl.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ATEMSharedState\ATEMSharedState.csproj" />
     <ProjectReference Include="..\Configurations\Configurations.csproj" />
   </ItemGroup>
 
