--- a/PiAtemTest/PiAtemTest.csproj
+++ b/PiAtemTest/PiAtemTest.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Configurations>Debug;Release;FullTest</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Configurations\Configurations.csproj" />
+    <ProjectReference Include="..\SwitcherControl\SwitcherControl.csproj" />
   </ItemGroup>
 
 </Project>
