--- a/SwitcherControl/SwitcherControl.csproj
+++ b/SwitcherControl/SwitcherControl.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <UseWPF>true</UseWPF>
+    <!--<TargetFramework>net7.0-windows</TargetFramework>-->
+    <TargetFramework>net7.0</TargetFramework>
+    <!--<UseWPF>true</UseWPF>-->
     <Configurations>Debug;Release;FullTest</Configurations>
   </PropertyGroup>
 
