--- a/MIDI_DEBUGGER/MIDI_DEBUGGER.csproj
+++ b/MIDI_DEBUGGER/MIDI_DEBUGGER.csproj
@@ -8,17 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="MidiDriver\ProtocolData\Levels.csv" />
-    <None Remove="MidiDriver\ProtocolData\Mutes.csv" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="MidiDriver\ProtocolData\Levels.csv" />
-    <EmbeddedResource Include="MidiDriver\ProtocolData\Mutes.csv" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="NAudio.Midi" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SQMIDI\SQMIDI.csproj" />
   </ItemGroup>
 
 </Project>
