--- a/UIControls/UIControls.csproj
+++ b/UIControls/UIControls.csproj
@@ -47,6 +47,7 @@
 
   <ItemGroup>
     <PackageReference Include="AvalonEdit" Version="6.1.3.50" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
