--- a/UIControls/UIControls.csproj
+++ b/UIControls/UIControls.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="csssyntax.xshd" />
     <None Remove="htmlsyntax.xshd" />
     <None Remove="Icons\ArtistWhite.png" />
     <None Remove="Icons\DeleteWhite.png" />
@@ -20,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="csssyntax.xshd" />
     <EmbeddedResource Include="htmlsyntax.xshd" />
     <EmbeddedResource Include="Icons\ArtistWhite.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
