WIP support for script running cameras; WIP import script updates; Can override slide render premultiply via scoped variable; Slide can now refer to switcher config sources for cameras as variables (uses LongName); Better intellisense for watch variables; Fix Bug with HotReload not being able to create new file??????

--- a/CCUI-UI/CCUI-Controls.csproj
+++ b/CCUI-UI/CCUI-Controls.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\CameraDriver\CameraDriver.csproj" />
     <ProjectReference Include="..\CommonIcons\CommonIcons.csproj" />
     <ProjectReference Include="..\Configurations\Configurations.csproj" />
+    <ProjectReference Include="..\IntegratedPresenterAPIInterop\IntegratedPresenterAPIInterop.csproj" />
   </ItemGroup>
 
 </Project>
