--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -24,7 +24,7 @@
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Green.lib.json" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Hymns.lib.json" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
-    <None Remove="LayoutInfo\Defaults\NewLibBundles\AnthemTitles.lib.json" />
+    <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Anthems.lib.json" />
     <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.CommonColored.lib.json" />
     <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Readings.lib.json" />
     <None Remove="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json" />
@@ -54,7 +54,7 @@
     <EmbeddedResource Include="FontManagement\Fonts\lib\LSBSymbol.ttf" />
     <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.Green.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
-    <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\AnthemTitles.lib.json" />
+    <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Anthems.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.CommonColored.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Readings.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json">
