Add extras section to seasons.json

--- a/BlobData/seasons.json
+++ b/BlobData/seasons.json
@@ -100,6 +100,11 @@
         "macros": {
             "color-main": "\"#ff298f45\"",
             "text-alt": "\"#ff298f45\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "\"#298f45\"",
+            "Xenon.Titles@color-main": "\"#298f45\"",
+            "Xenon.Titles@text-alt": "\"#298f45\"",
         }
     }
 ]
