fix trailing commas seasons.json

--- a/BlobData/seasons.json
+++ b/BlobData/seasons.json
@@ -104,7 +104,7 @@
         "extras": {
             "Xenon.Anthems@color-main": "\"#298f45\"",
             "Xenon.Titles@color-main": "\"#298f45\"",
-            "Xenon.Titles@text-alt": "\"#298f45\"",
+            "Xenon.Titles@text-alt": "\"#298f45\""
         }
     }
 ]
