Tweak Copy Title

--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -27,6 +27,7 @@
     <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Anthems.lib.json" />
     <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.CommonColored.lib.json" />
     <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Readings.lib.json" />
+    <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Titles.lib.json" />
     <None Remove="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\SermonLayoutInfo_Default.json" />
@@ -57,6 +58,7 @@
     <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Anthems.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.CommonColored.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Readings.lib.json" />
+    <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Titles.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
