--- a/LutheRun/LutheRun.csproj
+++ b/LutheRun/LutheRun.csproj
@@ -10,9 +10,10 @@
     <None Remove="PrefabBlobs\AnthemTemplate.txt" />
     <None Remove="PrefabBlobs\ApostlesCreed.txt" />
     <None Remove="PrefabBlobs\Bells.txt" />
-    <None Remove="PrefabBlobs\CopyTitle.txt" />
     <None Remove="PrefabBlobs\EndTitle.txt" />
     <None Remove="PrefabBlobs\LordsPrayer.txt" />
+    <None Remove="PrefabBlobs\Mk1CopyTitle.txt" />
+    <None Remove="PrefabBlobs\Mk2CopyTitle.txt" />
     <None Remove="PrefabBlobs\NiceneCreed.txt" />
     <None Remove="PrefabBlobs\PaneledAnnouncementsTemplate.txt" />
     <None Remove="PrefabBlobs\PaneledAnthemTemplate.txt" />
@@ -29,12 +30,13 @@
 
   <ItemGroup>
     <EmbeddedResource Include="PrefabBlobs\AnthemPanel.txt" />
+    <EmbeddedResource Include="PrefabBlobs\Mk2CopyTitle.txt" />
     <EmbeddedResource Include="PrefabBlobs\PaneledAnnouncementsTemplate.txt" />
     <EmbeddedResource Include="PrefabBlobs\PaneledAnthemTemplate.txt" />
     <EmbeddedResource Include="PrefabBlobs\AnthemTemplate.txt" />
     <EmbeddedResource Include="PrefabBlobs\Bells.txt" />
     <EmbeddedResource Include="PrefabBlobs\EndTitle.txt" />
-    <EmbeddedResource Include="PrefabBlobs\CopyTitle.txt" />
+    <EmbeddedResource Include="PrefabBlobs\Mk1CopyTitle.txt" />
     <EmbeddedResource Include="PrefabBlobs\PIPReadingScriptIntroBlock.txt" />
     <EmbeddedResource Include="PrefabBlobs\PIPReadingScriptBlock.txt" />
   </ItemGroup>
