HTML based creeds

--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -26,7 +26,9 @@
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
     <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Anthems.lib.json" />
     <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.CommonColored.lib.json" />
+    <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Creeds.lib.json" />
     <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Readings.lib.json" />
+    <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Sermons.lib.json" />
     <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.Titles.lib.json" />
     <None Remove="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json" />
@@ -57,7 +59,9 @@
     <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Anthems.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.CommonColored.lib.json" />
+    <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Creeds.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Readings.lib.json" />
+    <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Sermons.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.Titles.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
