--- a/LutheRun/LutheRun.csproj
+++ b/LutheRun/LutheRun.csproj
@@ -9,12 +9,15 @@
     <None Remove="PrefabBlobs\AnthemPanel.txt" />
     <None Remove="PrefabBlobs\AnthemTemplate.txt" />
     <None Remove="PrefabBlobs\ApostlesCreed.txt" />
+    <None Remove="PrefabBlobs\ApostlesCreedHTML.txt" />
     <None Remove="PrefabBlobs\Bells.txt" />
     <None Remove="PrefabBlobs\EndTitle.txt" />
     <None Remove="PrefabBlobs\LordsPrayer.txt" />
+    <None Remove="PrefabBlobs\LordsPrayerHTML.txt" />
     <None Remove="PrefabBlobs\Mk1CopyTitle.txt" />
     <None Remove="PrefabBlobs\Mk2CopyTitle.txt" />
     <None Remove="PrefabBlobs\NiceneCreed.txt" />
+    <None Remove="PrefabBlobs\NiceneCreedHTML.txt" />
     <None Remove="PrefabBlobs\PaneledAnnouncementsTemplate.txt" />
     <None Remove="PrefabBlobs\PaneledAnthemTemplate.txt" />
     <None Remove="PrefabBlobs\PIPReadingScriptBlock.txt" />
@@ -30,7 +33,10 @@
 
   <ItemGroup>
     <EmbeddedResource Include="PrefabBlobs\AnthemPanel.txt" />
+    <EmbeddedResource Include="PrefabBlobs\ApostlesCreedHTML.txt" />
+    <EmbeddedResource Include="PrefabBlobs\LordsPrayerHTML.txt" />
     <EmbeddedResource Include="PrefabBlobs\Mk2CopyTitle.txt" />
+    <EmbeddedResource Include="PrefabBlobs\NiceneCreedHTML.txt" />
     <EmbeddedResource Include="PrefabBlobs\PaneledAnnouncementsTemplate.txt" />
     <EmbeddedResource Include="PrefabBlobs\PaneledAnthemTemplate.txt" />
     <EmbeddedResource Include="PrefabBlobs\AnthemTemplate.txt" />
