--- a/LutheRun/LutheRun.csproj
+++ b/LutheRun/LutheRun.csproj
@@ -23,7 +23,8 @@
     <None Remove="PrefabBlobs\PaneledAnthemTemplate.txt" />
     <None Remove="PrefabBlobs\PIPReadingScriptBlock.txt" />
     <None Remove="PrefabBlobs\PIPReadingScriptIntroBlock.txt" />
-    <None Remove="PrefabBlobs\PrePIPScriptBlock_Creed.txt" />
+    <None Remove="PrefabBlobs\PrePIPScriptBlock_Creed-html.txt" />
+    <None Remove="PrefabBlobs\PrePIPScriptBlock_Creed-std.txt" />
     <None Remove="PrefabBlobs\PrePIPScriptBlock_Hymn-Fast.txt" />
     <None Remove="PrefabBlobs\PrePIPScriptBlock_Hymn-std.txt" />
     <None Remove="PrefabBlobs\PrePIPScriptIntroBlock_Hymn-fast.txt" />
@@ -37,6 +38,7 @@
   <ItemGroup>
     <EmbeddedResource Include="PrefabBlobs\AllSubPanels.txt" />
     <EmbeddedResource Include="PrefabBlobs\AnthemPanel.txt" />
+    <EmbeddedResource Include="PrefabBlobs\PrePIPScriptBlock_Creed-html.txt" />
     <EmbeddedResource Include="PrefabBlobs\SubPaneledAnthemTemplate.txt" />
     <EmbeddedResource Include="PrefabBlobs\SermonHTML.txt" />
     <EmbeddedResource Include="PrefabBlobs\ApostlesCreedHTML.txt" />
@@ -54,7 +56,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="PrefabBlobs\PrePIPScriptBlock_Creed.txt" />
+    <EmbeddedResource Include="PrefabBlobs\PrePIPScriptBlock_Creed-std.txt" />
   </ItemGroup>
 
   <ItemGroup>
